--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,32 @@
-<h1>Hello World!</h1>
-<p>This is my first webage!!</p>
-<p>This is {{first_name}}</p>
-<p>{{stuff | title}}</p>
+{% extends 'base.html' %}
 
-<h3>Favorite Fruits:</h3>
-{% for topping in favorite_fruits %}
-    {% if topping==34 %}
-        {{topping+100}}<br/>
-    {% else %}
-        {{topping}}<br/>
-    {% endif %}
-
-    
+{% block content %}
+{% for message in get_flashed_messages() %}
+<br>
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+    {{ message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 {% endfor %}
 
-<br/><br/>
-{{favorite_fruits.2+10}}
+    <br>
+    <h1>Hello World!</h1>
+    <p>This is my first webage!!</p>
+    <p>This is {{first_name}}</p>
+    <p>{{stuff | title}}</p>
+
+    <h3>Favorite Fruits:</h3>
+    {% for topping in favorite_fruits %}
+        {% if topping==34 %}
+            {{topping+100}}<br/>
+        {% else %}
+            {{topping}}<br/>
+        {% endif %}
+
+        
+    {% endfor %}
+
+    <br/><br/>
+    {{favorite_fruits.2+10}}
+
+{% endblock %}
