--- a/templates/500.html
+++ b/templates/500.html
@@ -1,5 +1,11 @@
-<br>
-<center>
-    <h1>500 Internal Server Error</h1>
-    <p>page not found --try again...</p>
-</center>
+{% extends 'base.html' %}
+
+{% block content %}
+
+    <br>
+    <center>
+        <h1>500 Internal Server Error</h1>
+        <p>page not found --try again...</p>
+    </center>
+
+{% endblock %}
