--- a/templates/user.html
+++ b/templates/user.html
@@ -1,1 +1,8 @@
-<h1>Hello {{ user_name | capitalize }}</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+    <br>
+    <h1>Hello {{ user_name | title }}</h1>
+
+{% endblock %}
