--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('name')}}">信用表單</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('add_user')}}">徵信表單</a>
+          </li>
           
           
         </ul>
