--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -5,7 +5,7 @@
 {% for message in get_flashed_messages() %}
 <br>
 <div class="alert alert-success alert-dismissible fade show" role="alert">
-    Hey {{ name }} - {{ message }}
+    Hey {{ message }}
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {% endfor %}
@@ -19,6 +19,7 @@
         <td>{{our_user.userid}}</td>
         <td><a href="{{url_for('update', id=our_user.userid)}}">{{our_user.username}}</a></td>
         <td>{{our_user.email}}</td>
+        <td><a href="{{url_for('delete', id=our_user.userid)}}">Delete</a></td>
     </tr>
 
     {% endfor %}
@@ -63,6 +64,10 @@
         class="col-sm-2 col-form-label"
         )}}
         {{ form.loanAMT(class="form-control") }}
+        {{ form.AMT_child.label(
+            class="col-sm-2 col-form-label"
+            )}}
+        {{ form.AMT_child(class="form-control") }}
         <br>
         {{ form.submit(class="btn btn-warning") }}
     </form>
@@ -74,6 +79,7 @@
         <td>{{our_user.userid}}</td>
         <td><a href="{{url_for('update', id=our_user.userid)}}">{{our_user.username}}</a></td>
         <td>{{our_user.email}}</td>
+        <td><a href="{{url_for('delete', id=our_user.userid)}}">Delete</a></td>
     </tr>
 
     {% endfor %}
