--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -68,6 +68,14 @@
             class="col-sm-2 col-form-label"
             )}}
         {{ form.AMT_child(class="form-control") }}
+        {{ form.password_hash.label(
+            class="col-sm-2 col-form-label"
+            )}}
+        {{ form.password_hash(class="form-control") }}
+        {{ form.password_hash2.label(
+            class="col-sm-2 col-form-label"
+            )}}
+        {{ form.password_hash2(class="form-control") }}
         <br>
         {{ form.submit(class="btn btn-warning") }}
     </form>
