--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -15,6 +15,12 @@
           <li class="nav-item">
             <a class="nav-link" href="{{url_for('add_user')}}">徵信表單</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('add_post')}}">Add Blog Post</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('posts')}}">Posts</a>
+          </li>
           
           
         </ul>
