--- a/templates/post.html
+++ b/templates/post.html
@@ -22,6 +22,7 @@
     {{post.content}} <br><br>
     <a href="{{url_for('edit_post',id=post.id)}}" class="btn btn-warning btn-sm">Edit Post</a>
     <a href="{{url_for('posts')}}" class="btn btn-warning btn-sm">Back to Blog</a>
+    <a href="{{url_for('delete_post', id=post.id)}}" class="btn btn-danger btn-sm">Delete Post</a>
 </div>
 
 
