--- a/templates/posts.html
+++ b/templates/posts.html
@@ -23,6 +23,7 @@
     <br><br>
     <a href="{{url_for('post',id=post.id)}}" class="btn btn-warning btn-sm">View Post</a>
     <a href="{{url_for('edit_post',id=post.id)}}" class="btn btn-warning btn-sm">Edit Post</a>
+    <a href="{{url_for('delete_post',id=post.id)}}" class="btn btn-danger btn-sm">Delete Post</a>
     <br><br>
 </div>
 {% endfor %}
